[package]
name = "python-instruction-dsl-proc"
license = "GPL-3.0-or-later"
description = "A procedural macro for defining Python instructions in a DSL."
repository = "https://github.com/Svenskithesource/python-instruction-dsl-proc"
readme = "README.md"
version = "0.1.6"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
paste = "1.0.15"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }
